hard-gists/7785749/run.log
=== Docker Run Log for 7785749 ===
Started at: Mi 29. Okt 17:17:43 CET 2025

[2025-10-29 17:17:43] START: Running container for 7785749
[2025-10-29 17:17:43] SUCCESS: Container 7ad27125ca112704b65e869a4b7675b73471dec0285d33df9c674e80042d4640 started for 7785749
=== Container logs for 7785749 ===
  File "/snippet.py", line 175
    print 'Spotlight search terminated'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7785749 ===
[2025-10-29 17:17:46] INFO: Container 7ad27125ca112704b65e869a4b7675b73471dec0285d33df9c674e80042d4640 has stopped
